--- a/index.html
+++ b/index.html
@@ -2,15 +2,65 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>vueadmin</title>
+    <meta charset="utf-8">
+    <title>vueadmin</title>
 </head>
 
 <body>
-  <div id="app">
+    <div id="app">
 
-  </div>
-  <!-- built files will be auto injected -->
+    </div>
+    <!-- built files will be auto injected -->
+
+    <!-- HTTP -->
+    <script src="http://cdn.ronghub.com/RongIMLib-2.5.2.js"></script>
+    <!-- HTTPS -->
+    <script src="https://cdn.ronghub.com/RongIMLib-2.5.2.js"></script>
+    <!-- 压缩版 -->
+    <script src="https://cdn.ronghub.com/RongIMLib-2.5.2.min.js"></script>
+    <script>
+        // var appkey = "c9kqb3rdc29oj";
+        // var ry = RongIMLib.RongIMClient.init(appkey);
+        // console.log(ry);
+
+        // RongIMClient.setConnectionStatusListener({
+
+        //     onChanged: function(status) {
+        //         // status 标识当前连接状态
+        //         switch (status) {
+        //             case RongIMLib.ConnectionStatus.CONNECTED:
+        //                 console.log("链接成功");
+        //                 break;
+        //             case RongIMLib.ConnectionStatus.CONNECTING:
+        //                 console.log("正在链接");
+        //                 break;
+        //             case RongIMLib.ConnectionStatus.DISCONNECTED:
+        //                 console.log("断开连接");
+        //                 break;
+        //             case RongIMLib.ConnectionStatus
+        //             .KICKED_OFFLINE_BY_OTHER_CLIENT:
+        //                 console.log("其他设备登录, 本端被踢");
+        //                 break;
+        //             case RongIMLib.ConnectionStatus.DOMAIN_INCORRECT:
+        //                 console.log(
+        //                     "域名不正确, 请至开发者后台查看安全域名配置"
+        //                 );
+        //                 break;
+        //             case RongIMLib.ConnectionStatus.NETWORK_UNAVAILABLE:
+        //                 console.log(
+        //                     "网络不可用, 此时可调用 reconnect 进行重连"
+        //                 );
+        //                 break;
+        //             default:
+        //                 console.log("链接状态为", status);
+        //                 console.log("了解")
+        //                 break;
+        //         }
+        //     }
+        // });
+
+        // console.log(RongIMClient)
+    </script>
 </body>
 
 </html>
