--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- built files will be auto injected -->
 
     <!-- HTTP -->
-    <script src="http://cdn.ronghub.com/RongIMLib-2.5.2.js"></script>
+    <!-- <script src="http://cdn.ronghub.com/RongIMLib-2.5.2.js"></script> -->
     <!-- HTTPS -->
-    <script src="https://cdn.ronghub.com/RongIMLib-2.5.2.js"></script>
+    <!-- <script src="https://cdn.ronghub.com/RongIMLib-2.5.2.js"></script> -->
     <!-- 压缩版 -->
-    <script src="https://cdn.ronghub.com/RongIMLib-2.5.2.min.js"></script>
+    <!-- <script src="https://cdn.ronghub.com/RongIMLib-2.5.2.min.js"></script> -->
     <script>
         // var appkey = "c9kqb3rdc29oj";
         // var ry = RongIMLib.RongIMClient.init(appkey);
